PA-10496: Refactor showcases

--- a/storybook/stories/components/icons/generic-icon.stories.mdx
+++ b/storybook/stories/components/icons/generic-icon.stories.mdx
@@ -106,6 +106,6 @@ export const Template = () => {
 
 ## Generic icon example
 
-<Story name="GenericIcon">
+<Story name="Default">
     {Template.bind({})}
 </Story>
