--- a/storybook/stories/components/icons/specific-icons.stories.mdx
+++ b/storybook/stories/components/icons/specific-icons.stories.mdx
@@ -18,7 +18,7 @@ import { decorators } from '../../decorators'
 import { AddColumnIcon } from '../../../../src/icons/add-column-icon'
 
 <Meta
-  title="Components/Icons/Showcase"
+  title="Components/Icons/Specific Icons"
   decorators={decorators}
 />
 
@@ -127,7 +127,7 @@ export const Template = args => (
 
 # Icons
 <Story
-  name="Default"
+  name="Overview"
   args={{}}
 >
   {Template.bind({})}
